--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ packages = [{include = "lang_gen"}]
 
 [tool.poetry.dependencies]
 python = "^3.11"
+openai = "^0.27.8"
+python-dotenv = "^1.0.0"
+click = "^8.1.3"
 
 
 [build-system]
