--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 description = "ChatGPT language generator and translator"
 authors = ["Caleb Sacks <16855387+clabe45@users.noreply.github.com>"]
 readme = "README.md"
+homepage = "https://github.com/clabe45/conlang-gpt"
 keywords = ["conlang", "chatgpt", "gpt 4", "openai"]
-github = "https://github.com/clabe45/conlang-gpt"
 license = "MIT"
 packages = [{include = "conlang_gpt"}]
 
