--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ packages = [{include = "conlang_gpt"}]
 
 [tool.poetry.dependencies]
 python = "^3.11"
-openai = "^0.27.8"
+openai = {extras = ["embeddings"], version = "^0.27.8"}
 python-dotenv = "^1.0.0"
 click = "^8.1.3"
 
