--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,9 @@ click = "^8.1.3"
 conlang = "conlang_gpt.__init__:cli"
 
 
+[tool.poetry.group.dev.dependencies]
+black = "^23.3.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
