--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ click = "^8.1.3"
 
 
 [tool.poetry.scripts]
-conlang = "conlang_gpt.__init__:cli"
+conlang = "conlang_gpt.cli:cli"
 
 
 [tool.poetry.group.dev.dependencies]
