--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ license = "MIT"
 packages = [{include = "conlang_gpt"}]
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = ">=3.9, <4.0"
 openai = {extras = ["embeddings"], version = "^0.27.8"}
 python-dotenv = "^1.0.0"
 click = "^8.1.3"
