--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ conlang = "conlang_gpt.cli:cli"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.3.0"
+pytest = "^7.4.2"
 
 [build-system]
 requires = ["poetry-core"]
